--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="skill-row-3">
           <img class= designer src="images/process.png" alt="Process">
-          <img class= model src="images/3D-model.png" alt="model">
+          <img class= model src="images/3d-model.png" alt="model">
           <div class="skill-3">
             <h3>CAD Designing</h3>
             <p>Proficient in CAD (Computer-Aided Design) software, I have a strong background in creating detailed designs for a variety of industries. My skills include 2D and 3D modeling, creating detailed drawings and schematics, and using simulations to evaluate the performance and functionality of designs. I am highly detail-oriented and have a passion for bringing ideas to life through precise and effective design.</p>
